# searchmate

./: LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: docs.yml  lint.yml
docs/source/: conf.py  index.rst  modules.rst  searchmate.gui.rst  searchmate.rst  searchmate.skills.rst
searchmate/: __main__.py  config.py  skill.py  skill_loader.py
searchmate/gui/: gui.py  styles.css
searchmate/skills/: gpt.py  gpt_skill.py  math.py  math_skill.py  web_skill.py
