[tool.poetry]
name = "searchmate"
version = "0.1.0"
description = """
A modular and versatile desktop assistant that searches for apps, \
performs basic math and makes chatting with GPT easier.
"""
authors = ["mkalitka <mikolaj.kalitka@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
