[tool.poetry]
name = "searchmate"
version = "0.1.0"
description = """
A modular and versatile desktop assistant that searches for apps, \
performs basic math and makes chatting with GPT easier.\
"""
license = "MIT"
authors = ["mkalitka <mikolaj.kalitka@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
configparser = "^5.3.0"
pyqt6 = "^6.5.1"
pynput = "^1.7.6"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"
sphinx-autodoc-typehints = "^1.23.0"
sphinx-press-theme = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
